--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>tiny wings</title>
     <script src="script.js" type="module"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <canvas id="canvas" width="854" height="480">This applet requires a browser that supports HTML5 and JavaScript.</canvas>
+    <canvas id="canvas" width="800" height="450"></canvas>
   </body>
 </html>
