--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>tiny wings</title>
-    <script src="script.js" type="module"></script>
+    <title>tiny wings clone</title>
+    <script src="./modules/index.js" type="module"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
